--- a/scss/blocks/_content-container.scss
+++ b/scss/blocks/_content-container.scss
@@ -79,7 +79,45 @@
     margin-left: 119px;
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1440px) {}
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+    .content-container_left {
+        margin-top: 180px;
+        margin-left: 250px;
+
+        &__item {
+
+            &::before {
+                position: absolute;
+                content: '';
+                background-image: url('../../images/block-8_icons/icon_small_question_mark.svg');
+                width: 33px;
+                height: 33px;
+                top: 0;
+                left: -100px;
+            }
+        }
+
+        &__item_sp {
+            margin-top: 55px;
+            font-weight: 300;
+            line-height: 30px;
+
+            &::before {
+                position: absolute;
+                content: '';
+                background-image: url('../../images/block-8_icons/icon_phone.svg');
+                width: 66px;
+                height: 66px;
+                top: 0px;
+                left: -116px;
+            }
+        }
+    }
+
+    .content-container_right {
+        margin-top: 180px;
+    }
+}
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {}
 
