--- a/scss/blocks/_convinience.scss
+++ b/scss/blocks/_convinience.scss
@@ -59,7 +59,12 @@
 }
 
 
-@media screen and (min-width: 1025px) and (max-width: 1440px) {}
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+    .card-wrapper {
+        justify-content: space-around;
+        gap: 0;
+    }
+}
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {}
 
