--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -67,7 +67,16 @@
     }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1440px) {}
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+    .footer {
+        max-width: 1440px;
+        min-width: 1440px;
+    }
+    
+    .footer-logo {
+        margin-left: 100px;
+    }
+}
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {}
 
