--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -29,7 +29,14 @@
     }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .title-container {
+
+        &_contacts {
+            margin-left: -140px;
+        }
+    }
+}
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .title-container {
