--- a/scss/blocks/_block-btn.scss
+++ b/scss/blocks/_block-btn.scss
@@ -61,7 +61,32 @@
 
 @media screen and (min-width: 1025px) and (max-width: 1440px) {}
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .block-btn {
+        position: relative;
+        max-width: 183px;
+        min-width: 183px;
+        max-height: 51px;
+        min-height: 51px;
+        padding-left: 23px;
+        font-size: 16px;
+
+        &_centered {
+            margin-right: 408px;
+            margin-left: 408px;
+
+            &::after {
+                position: absolute;
+                content: '';
+                background-image: url('../../images/arrows/white_arrow.svg');
+                min-width: 32px;
+                height: 10px;
+                top: 20.5px;
+                right: 20px;
+            }
+        }
+    }
+}
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .block-btn {
