--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -1,14 +1,14 @@
 .title-container {
 
     &_contacts {
-        margin-top: 21px;
+        margin-top: 83px;
         margin-left: 245px;
     }
 
     &__icon,
     &__title {
         display: inline-block;
-        margin-top: 62px;
+        margin-top: 0;
     }
 
     &__title {
