fix margins, except 320px style

--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -107,6 +107,7 @@
 
     .contacts-inner {
         display: flex;
+        margin-top: 50px;
 
         &_left,
         &_right {
@@ -114,7 +115,8 @@
             flex-direction: column;
             align-items: flex-start;
             max-height: 155px;
-            margin-top: 35px;
+            // margin-top: 35px;
+            margin-top: 0;
             padding: 26px;
         }
 
@@ -152,6 +154,7 @@
 
     .contacts-inner {
         display: flex;
+        margin-top: 35px;
 
         &_left,
         &_right {
@@ -159,7 +162,8 @@
             flex-direction: column;
             align-items: flex-start;
             max-height: 155px;
-            margin-top: 35px;
+            // margin-top: 35px;
+            margin-top: 0;
             padding: 26px;
         }
 
@@ -201,8 +205,9 @@
         flex-direction: column;
         gap: 10px;
         max-width: 340px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 34px auto 0;
+        // margin-left: auto;
+        // margin-right: auto;
 
         &_left,
         &_right {
@@ -218,7 +223,6 @@
         &_left {
             max-height: 100px;
             gap: 0;
-            margin-top: 34px;
         }
 
         &_right {
