--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -33,6 +33,7 @@
     .title-container {
 
         &_contacts {
+            margin-top: 60px;
             margin-left: -140px;
         }
     }
@@ -48,7 +49,7 @@
         &__icon,
         &__title {
             display: inline-block;
-            margin-top: 32px;
+            // margin-top: 32px;
         }
 
         &__title {
@@ -62,8 +63,10 @@
     .title-container {
         max-width: 390px;
         line-height: 29px;
+        margin-top: 50px;
 
         &_contacts {
+            margin-top: 39px;
             margin-left: 0;
         }
 
@@ -79,7 +82,7 @@
 
         &__title {
             max-width: 250px;
-            margin-top: 50px;
+            margin-top: 0;
             margin-left: 21px;
             font-size: 30px;
         }
@@ -87,6 +90,9 @@
 
     .convinience .title-container__icon {
         margin-bottom: 50px;
+    }
+    .service_bg-white .title-container{
+        margin-top: 0;
     }
 }
 
