--- a/scss/blocks/_banner.scss
+++ b/scss/blocks/_banner.scss
@@ -1,8 +1,10 @@
 .banner {
+    * {
+        outline: 1px solid palevioletred;
+    }
 
     &__container {
         max-width: 1920px;
-
         font-family: $main-font;
 
         * {
@@ -21,7 +23,7 @@
     &__slide {
         display: flex;
         align-items: center;
-        // max-height: 700px;
+        min-height: 700px;
         padding-bottom: 20%;
         background-size: 100%;
         background-repeat: no-repeat;
@@ -67,6 +69,7 @@
 
     &__button-more {
         @include button-main (234px, 15px, $button-font-size);
+        text-transform: uppercase;
 
         img {
             display: inline;
