--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -59,9 +59,11 @@
     }
 
     &__card-img {
-        width: 100%;
-        max-width: 342px;
-        padding: 10px 50px;
+        display: flex;
+        align-items: center;
+        width: 90%;
+        min-height: 38%;
+        padding: 20px 50px;
         border-bottom: 1.3px solid $bg-color-light;
     }
 
@@ -111,7 +113,7 @@
 
     &__size-option {
         // width: 52px;
-        width: 18%;
+        width: 19%;
         // max-width: 52px;
         padding: 6px;
         margin-right: 6px;
